// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render a default component 1`] = `
<div
  aria-checked={false}
  className="switch"
  data-terra-switch-show-focus-styles={true}
  disabled={false}
  id="defaultSwitch"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="switch"
  tabIndex="0"
>
  <div
    className="label-container"
  >
    <div
      className="label-text"
    >
      default
    </div>
    <div
      className="status-label-text"
    >
      <FormattedMessage
        id="Terra.switch.switchstatuslabel.off"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="tray"
  >
    <div
      className="slider"
    />
  </div>
</div>
`;

exports[`Switch should render as disabled when set 1`] = `
<div
  aria-checked={false}
  className="switch is-disabled"
  data-terra-switch-show-focus-styles={true}
  disabled={true}
  id="disabledSwitch"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  role="switch"
>
  <div
    className="label-container"
  >
    <div
      className="label-text is-disabled"
    >
      Label
    </div>
    <div
      className="status-label-text is-disabled"
    >
      <FormattedMessage
        id="Terra.switch.switchstatuslabel.off"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="tray is-disabled"
  >
    <div
      className="slider is-disabled"
    />
  </div>
</div>
`;
